# opencv_maxos

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  Quick.cpp  Quick.hpp  cmake_install.cmake  main.cpp  pix_opencv
